--- a/flutter_assignment/pubspec.yaml
+++ b/flutter_assignment/pubspec.yaml
@@ -23,6 +23,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http:
+  geolocator:
+  flutter_bloc:
+  bloc:
+  conditional_builder:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -32,9 +37,9 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
   flutter_bloc:
   bloc:
-  dio:
   conditional_builder:
 
 # For information on the generic Dart part of this file, see the
