--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.flutter_assignment">
+    package="com.example.flutter_weather_assignment">
    <application
-        android:label="flutter_assignment"
+        android:label="flutter_weather_assignment"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
